--- a/templates/index.ejs
+++ b/templates/index.ejs
@@ -83,7 +83,7 @@
   <%- include('shared/comp_content_subtitle_arrow', {message: 'Skills & Experiences' }) %>
   <!-- Arrow -->
 
-  <%- include(`${templatePath}/shared/tagCloud`) %>
+  <%- include(`${templatePath}/shared/comp_tagCloud`) %>
   <%- include(`${templatePath}/shared/comp_closingMessage`, { version: '', message: ''}) %>
 
   <%- include(`${templatePath}/shared/comp_backTop`) %>
