--- a/templates/shared/LRcarousel.ejs
+++ b/templates/shared/LRcarousel.ejs
@@ -1,3 +1,52 @@
+<% if (typeof slide === 'undefined') { 
+  slide = ''; 
+} 
+%>
+
+<% if (typeof contentTitle1 === 'undefined') { 
+  contentTitle1 = ''; 
+} 
+%>
+<% if (typeof contentTitle2 === 'undefined') { 
+  contentTitle1 = ''; 
+} 
+%>
+<% if (typeof contentTitle3 === 'undefined') { 
+  contentTitle1 = ''; 
+} 
+%>
+<% if (typeof contentTitle4 === 'undefined') { 
+  contentTitle1 = ''; 
+} 
+%>
+<% if (typeof contentTitle5 === 'undefined') { 
+  contentTitle1 = ''; 
+} 
+%>
+
+<% if (typeof img1 === 'undefined') { 
+  img1 = ''; 
+} 
+%>
+<% if (typeof img2 === 'undefined') { 
+  img1 = ''; 
+} 
+%>
+<% if (typeof img3 === 'undefined') { 
+  img1 = ''; 
+} 
+%>
+<% if (typeof img4 === 'undefined') { 
+  img1 = ''; 
+} 
+%>
+<% if (typeof img5 === 'undefined') { 
+  img1 = ''; 
+} 
+%>
+
+
+
 <% if (slide === '2') { %>
     <div class="blankHXS"></div>
     <div class="wrapper">
