--- a/templates/architecture/index.ejs
+++ b/templates/architecture/index.ejs
@@ -290,7 +290,7 @@
 
   <!-- Shared across the platform -->
   <%- include(`${templatePath}/shared/comp_content_subtitle_arrow`, {message: 'Skills & Experiences' }) %>
-  <%- include(`${templatePath}/shared/tagCloud`) %>
+  <%- include(`${templatePath}/shared/comp_tagCloud`) %>
   <%- include(`${templatePath}/shared/comp_closingMessage`, { version: 'addMessage', message: `Thank You for Visiting! please <a class="textUnderline" href="mailto:vickyw.design@gmail.com">email</a> me
   about professional projects.`}) %>
 
