--- a/templates/shared/comp_cardnImg_nolink.ejs
+++ b/templates/shared/comp_cardnImg_nolink.ejs
@@ -8,8 +8,9 @@
                         <h5>Lorem</h5>
                         <h3><strong>Lorem ipsum</strong> </h3>
                         <p class="lineHorizAll"></p>
-                        <h6> Lorem ipsum dolor sit amet</h6>
-                        <h6> sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</h6>
+                        <h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                            incididunt ut labore et dolore magna aliqua. Vitae ultricies leo integer malesuada nunc vel risus
+                            commodo.</h4>
                     </div>
                 </div>
             </div>
