--- a/templates/shared/block_carouselHoriz_bg.ejs
+++ b/templates/shared/block_carouselHoriz_bg.ejs
@@ -1,4 +1,4 @@
-<div class="BgSkylineBlueLter">
+<div class="teal800Lter">
   <div class="wrapper">
     <div class=" LRcarousel Grid Grid--gutters Grid--1of4 Grid--center u-textCenter" aria-label="LRcarousel" tabindex="0" id="carousel1">
       <div class="carousel__nav Grid-cell">
