--- a/templates/shared/head.ejs
+++ b/templates/shared/head.ejs
@@ -80,8 +80,9 @@
 
 
 
+        <!-- <link href="https://cdn.jsdelivr.net/npm/the-new-css-reset@1.11.2/css/reset.min.css" rel="stylesheet"> -->
 
-        <!-- Links -->
+        <!-- CSS Reset -->
         <link rel="stylesheet" href="<%= websitePath %>/main.css">
         <script type="text/javascript" src="<%= websitePath %>/scripts.js"></script>
 
