--- a/ejs_literals/comp_cardnImg_link.ejs
+++ b/ejs_literals/comp_cardnImg_link.ejs
@@ -1,4 +1,5 @@
 <%- include(`${templatePath}/shared/comp_cardnImg_link`, {
-    cardTitle: ``, 
-    cardText: ``
+    cardnLinkTopText:`tag(s)`,
+    cardnLinkTitle: `Title`, 
+    cardnLinkText: `Description`
     }) %>
