--- a/templates/shared/comp_card_gradient.ejs
+++ b/templates/shared/comp_card_gradient.ejs
@@ -1,12 +1,12 @@
 <div class="Grid Grid--full Grid--gutters">
-    <div class="Grid-cell">
-        <div class="element">
-            <div class="elementDemoCard">
-                <div class="elementInnerDemoCard heightS">
-                    <h4> <strong> <%= cardTitle %></strong> </h4>
-                    <p><%= cardText %>
-                </div>
-            </div>
+  <div class="Grid-cell">
+    <div class="element">
+      <div class="elementDemoCard">
+        <div class="elementInnerDemoCard heightS">
+          <h4> <strong> <%= cardTitle %></strong> </h4>
+          <p><%= cardText %></p>
         </div>
+      </div>
     </div>
+  </div>
 </div>
